# Linear-equ

./: .gitignore
tp1/: .gitignore  CMakeLists.txt  README.md  metnum.py
tp1/data/: nba_2016_scores_lastdate.csv  nba_2016_second_date.csv
tp1/exps/: CMM_cualitativo_segunda_fecha.csv  CMM_cualitativo_sin_ultima_fecha.csv  WPL_cualitativo_segunda_fecha.csv  WPL_cualitativo_sin_ultima_fecha.csv  WP_cualitativo_segunda_fecha.csv  WP_cualitativo_sin_ultima_fecha.csv  comparacionCuantitativo.csv  comparacionCuantitativo.wp.csv  comparacionMethods.csv  comparacionTiempos.csv  comparacion_metodos_cualitativo_segunda_fecha.csv  cualitativo_CMM.csv  cualitativo_WPL.csv  exps.ipynb  graficos.py  last_date_cualitativo_WP.csv  output_2958_430.csv  output__CMM_2958_430.csv  output__Laplace_2958_430.csv  output__WP_2958_430.csv  penal-2da-wpl.csv  penal-last_date_cualitativo_CMM.csv  penal-last_date_cualitativo_WP.csv  penal-last_date_cualitativo_WPL.csv  penal-segunda_fecha_cualitativo_CMM.csv  penal-segunda_fecha_cualitativo_WP.csv  penal-segunda_fecha_cualitativo_WPL.csv  penalizacion.py  segunda_fecha_cualitativo_CMM.csv  segunda_fecha_cualitativo_WP.csv
tp1/exps/cuantitativo_diff/: test-prob-1.out  test-prob-2.out  test1.out  test2.out  test_completo_100_8.out
tp1/google-test/: Makefile  cmake_install.cmake
tp1/google-test/include/gtest/: gtest-message.h
tp1/src/c++/: Season.hpp  defines.h  funciones.cpp  funciones.hpp  main.cpp  partido.cpp  partido.h  tests.cpp
tp1/src/c++/tests/: elimGaussTests.cpp  seasonTests.cpp  solveSystemTests.cpp
tp1/src/scripts/: settings.py  tptests.py
tp1/tests/: test-prob-1.wpl.expected  test-prob-2.wpl.expected  test1.wpl.expected  test2.wp.expected  test2.wpl.expected
tp1/tests/test_completos/: test_completo_1000_2.out  test_completo_1000_8.out  test_completo_100_4.out  test_completo_10_1.wp.expected  test_completo_10_1.wpl.expected
tp1/tests/testsC/: elimGaussTests.cpp  expecteds.h  seasonTests.cpp  solveSystemTests.cpp
tp1/testsC/: elimGaussTests.cpp  experimentos.cpp  seasonTests.cpp  solveSystemTests.cpp
